<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.tw.witt.viewModel.MainViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.tw.witt.view.custom.VerticalViewPager
                android:id="@+id/main_vp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:viewPager_position="@{viewModel.currentPosition}"
                app:viewPager_configuration="@{viewModel.viewPagerConfiguration}" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>